# ssrjson-nix-dev

./: .gitignore  README.md  cleanup-flake-update-branches.sh  devshell-test.sh  flake.nix  pyproject.toml
.github/workflows/: flake-update.yml
devshell/: _dev_python.nix  _drvs.nix  dev-env.nix  dev_python.nix  maturin-build-hook-debug.sh  orjson-pypi.nix  orjson_fixed.nix  packages.nix  py314-pip.nix  py_overrides.nix  py_requirements.nix  pyver.json  sde.nix  shell.nix  shellhook.nix  ssrjson_benchmark.nix  uv_workspace.nix  version_utils.nix
